# ML-Work

./: .gitignore  GIT_LARGE_FILES_TROUBLESHOOTING_GUIDE.md  README.md  term_deposit.ipynb  term_deposit_imbalance.ipynb
00_term_deposit/: README.md  term_deposit.ipynb
01_vol_nn_integration/: CMakeLists.txt  README.md  benchmark.py  cxx_batch.slurm  real_egarch16.out  real_egarch19.out  real_gm_egarch19.out  slurm-33469251.out  vol_int_rnn.ipynb  vol_integrate_gru.py  vol_integrate_lstm.py
01_vol_nn_integration/.cache/clangd/index/: CHNModel.h.013D15A8AC5CDE99.idx  CHNModel.h.041DF0B528F04F52.idx  Functionals.h.36182C020C41CE18.idx  Functionals.h.D96EC74A9FD5FA10.idx  GARCH_Volatility.h.6F32F3B8CDD27B08.idx  HNModel.h.23164DC6AC89A0CE.idx  HNModel.h.FE8DDC47B72023B7.idx  NeuralPricingKernel.cpp.CBE760CF0EED3CE0.idx  RNN_Functionals.h.42F1DB8BB2DD16F3.idx  RNN_Functionals.h.D3EA82E472375136.idx  VIFunctional.h.74B98DD01C5775CA.idx  VIFunctional.h.C50162CE2CCCE226.idx  bsIV.cpp.0BBD00A61383D8BE.idx  bsIV.cpp.46597487AAF258AF.idx  bsIV.h.BAC2D2E63364762A.idx  bsIV.h.D94AACB34EA27D1D.idx  chn_test.cpp.0FB90BCC5984371F.idx  chn_test.cpp.4E382A79C73AFCBB.idx  comp_heston_nandi.h.4726B2E8AAF79A2E.idx  data_frame_utils.cpp.395C234FAC494DE3.idx  dataframe.cpp.725FED528F6601A6.idx  dataframe.cpp.D8CFC7B62C94E2FB.idx  dataframe.h.0EF31D40094CCB5F.idx  dataframe.h.D2C8D9F0AF216DA5.idx  dataframe_filter.cpp.F50A397A2AEEBC99.idx  dataframe_io.cpp.708387C8D666CEF7.idx  dataframe_io.cpp.B06A16FE46F2A40C.idx  example_test.cpp.C973936BB6994E86.idx  example_test.cpp.D66F9D93CE0F8A30.idx  file_loader.cpp.5AC4E3C9BE3BB02D.idx  file_loader.cpp.771CE5E24AD84B4F.idx  file_loader.h.0FC38220617C7E98.idx  file_loader.h.8EC4AD613F240A7B.idx  heston_nandi.h.D505DBFC407EAB4C.idx  hn_test.cpp.49210E2CC01C0965.idx  hn_test.cpp.92B04D814E825F93.idx  main.cpp.3B7D240A71FB5F3A.idx  main_test.cpp.0358EE7946E40212.idx  main_test.cpp.039450F185AE21F5.idx  make_data.h.38658D1CE4E8373E.idx  (+12 more)
01_vol_nn_integration/all_data/: RV5.csv  exreturns.csv  read_me.txt  returns.csv
01_vol_nn_integration/include/: CHNModel.h  Functionals.h  GARCH_Volatility.h  HNModel.h  RNN_Functionals.h  VIFunctional.h  bsIV.h  comp_heston_nandi.h  heston_nandi.h  make_data.h  utils.h  vol_integrated_nn.h
01_vol_nn_integration/losses/: loss_egarch15.csv  loss_egarch16.csv  loss_egarch19.csv  loss_gm_real_egarch19.csv  loss_real_egarch15.csv  loss_real_egarch16.csv  loss_real_egarch17.csv  loss_real_egarch18.csv  loss_real_egarch19.csv
01_vol_nn_integration/models/: model_chn19.pt  model_hn19.pt
01_vol_nn_integration/src/: .gitignore  bsIV.cpp  chn_test.cpp  example_test.cpp  hn_test.cpp  simulation_test.cpp  utils.cpp  vi_lstm_test.cpp  vi_test.cpp
02_non_likelihood_based_estimation/: .gitignore
02_non_likelihood_based_estimation/MLE/: .gitignore  README.md  synth_batch.slurm
02_non_likelihood_based_estimation/MLE/.cache/clangd/index/: Functionals.h.721553B1055BC4D8.idx  Model.h.DD5644D651D49D7E.idx  main.cpp.033CCA59EBADBFE5.idx  utils.cpp.E31C52E8D5CB127C.idx  utils.h.3FEFA882DA474C28.idx
02_non_likelihood_based_estimation/MLE/include/: Functionals.h  Model.h  utils.h
02_non_likelihood_based_estimation/MLE/src/: main.cpp  utils.cpp
02_non_likelihood_based_estimation/TransformerGARCH/: .gitignore  CMakeLists.txt  README.md  synth_batch.slurm
02_non_likelihood_based_estimation/TransformerGARCH/.cache/clangd/index/: Functionals.h.340FE8EA984E43BD.idx  Model.cpp.1DBC93C7FAB9C69E.idx  Model.h.D81D048229A9CFDC.idx  TFTModel.h.11AA9413A9724278.idx  bsIV.cpp.62FCC311749D39CE.idx  dyn_struct.cpp.31C1FB0E805D323F.idx  enc_dec.h.1B536D6D8116CC64.idx  main.cpp.2B80E780C85377A5.idx  main_tft.cpp.B6CA41B2241B37C0.idx  main_tft_test.cpp.C139D066A3807C67.idx  tft_layers.cpp.E0EDD33450236355.idx  tft_layers.h.B6384C74A7C2CC6B.idx  tft_model.cpp.B9F446761A455066.idx  tft_model.h.FB653E2EA7D603C8.idx  tft_types.h.65612F28E37D4193.idx  utils.cpp.B33FC175D99D7425.idx  utils.h.0ADB6A0D64C8A3A6.idx
02_non_likelihood_based_estimation/TransformerGARCH/include/: Functionals.h  TFTModel.h  enc_dec.h  scaler.h  utils.h
02_non_likelihood_based_estimation/TransformerGARCH/libtorch_tft/: CMakeLists.txt  README.md
02_non_likelihood_based_estimation/TransformerGARCH/libtorch_tft/examples/: predict.cpp  train.cpp
02_non_likelihood_based_estimation/TransformerGARCH/libtorch_tft/include/: tft_layers.h  tft_model.h  tft_types.h
02_non_likelihood_based_estimation/TransformerGARCH/libtorch_tft/src/: tft_layers.cpp  tft_model.cpp
02_non_likelihood_based_estimation/TransformerGARCH/src/: main_tft.cpp  main_tft_test.cpp  utils.cpp
03_unspervised_calibration/: .gitignore  README.md  calibration.ipynb  cos_pricers.py  for_notebook.py  pipeline copy.py  pipeline.py  requirements.txt  sv_models.py  unsupervised_sv_model.py  vol_calib copy.py  vol_calib.py
